hphp/hack/test/typecheck/shape/shape_idx_arg_unknown_fields.php.like_types.exp
File "shape_idx_arg_unknown_fields.php", line 9, characters 15-20:
Invalid argument (Typing[4110])
File "shape_idx_arg_unknown_fields.php", line 9, characters 15-20:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_arg_unknown_fields.php", line 4, characters 3-36:
But got dynamic because it is an unenforceable type
