hphp/hack/test/typecheck/shape/shape_idx_arg_unknown_fields.php
<?hh // strict

function idxPassedInShapeWithUnknownFields(
  shape(
    'x' => int,
    ...
  ) $shape,
): void {
  Shapes::idx($shape, 'x');
  Shapes::idx($shape, 'y');
}
